shifter_imagegw_PYTHON = auth.py \
				__init__.py \
				api.py \
				auth.py \
				config.py \
				converters.py \
				dockerv2_ext.py \
				errors.py \
				fasthash.py \
				imagemngr.py \
				imageworker.py \
				models.py \
				transfer.py \
				util.py 

shifter_imagegwdir = $(pyexecdir)/shifter_imagegw
